--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "version": "0.1.55",
   "main": "build/index.js",
   "module": "build/index.es.js",
+  "sideEffects": ["*.scss","*.css"],
   "files": [
     "build"
   ],
