--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
     "registry": "https://npm.pkg.github.com"
   },
   "repository": "git://github.com/contacto-io/contacto-web-app",
-  "version": "0.1.55",
+  "version": "0.1.57",
   "main": "build/index.js",
   "module": "build/index.es.js",
-  "sideEffects": ["*.scss","*.css"],
+  "sideEffects": [
+    "*.scss",
+    "*.css"
+  ],
   "files": [
     "build"
   ],
-  "dependencies": {},
   "scripts": {
     "build": "npm run css-build && rollup -c",
     "css-build": "node-sass --omit-source-map-url src/style/main.scss build/style-guide.css",
@@ -94,12 +96,12 @@
     "ts-dedent": "^2.1.1"
   },
   "peerDependencies": {
+    "@date-io/moment": "1.3.13",
     "@material-ui/core": "^4.9.3",
     "@material-ui/pickers": "^3.3.10",
+    "moment": "^2.29.4",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@date-io/moment": "1.3.13",
-    "moment": "^2.29.4"
+    "react-dom": "^18.2.0"
   }
 }
