--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "loadash": "^1.0.0",
     "moment": "^2.29.4",
-    "node-sass": "^6.0.1",
+    "node-sass": "^9.0.0",
     "postcss": "^8.3.6",
     "prop-types": "^15.7.2",
     "raw-loader": "^4.0.2",
@@ -92,6 +92,7 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-uglify": "^6.0.4",
     "source-map-explorer": "^2.5.2",
     "ts-dedent": "^2.1.1"
   },
